# shorty

./: .gitignore  CONFIG.md  Dockerfile  README.md  compose.yaml  gunicorn-config.py  pyproject.toml  run.sh
src/: app.py
src/database/: db.py
src/lib/: encoder.py  utils.py
src/templates/: add_route.html.jinja2  url_table.html.jinja2
